--- a/2025 Fall - Mod 6 - Rain Dimen - Week 5-8 Reflection Notebook.ipynb
+++ b/2025 Fall - Mod 6 - Rain Dimen - Week 5-8 Reflection Notebook.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ac5ccdf0",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "beb5b35d-d0f3-4154-b67e-185ba285484b",
    "metadata": {},
    "outputs": [],
@@ -340,138 +340,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8544d41",
+   "id": "f443a0f8",
    "metadata": {},
    "source": [
-    "Question 1\n",
-    "\n",
-    "Suppose that a process can be modeled via linear regression: \n",
-    "\n",
-    "\n",
-    "W = np.random.normal(0, 1, (1000,))\n",
-    "X = W + np.random.normal(0, 1, (1000,)) \n",
-    "Z = np.random.normal(0, 1, (1000,)) \n",
-    "Y = X + Z + W + np.random.normal(0, 1, (1000,))\n",
-    " \n",
-    "\n",
-    "\n",
-    "Which is closest to the correlation of ﻿X﻿ with the error term in the equation for ﻿Y﻿? "
+    "# Week 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ef952c0b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "W = np.random.normal(0, 1, (1000,))\n",
-    "X = W + np.random.normal(0, 1, (1000,)) \n",
-    "Z = np.random.normal(0, 1, (1000,)) \n",
-    "Y = X + Z + W + np.random.normal(0, 1, (1000,))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "07e85248",
-   "metadata": {},
-   "source": [
-    "the error term is \n",
-    "error = Z + W + np.random.normal(0, 1, num)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "b8ef8965",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correlation between X and the error term: 0.40335501644287275\n"
-     ]
-    }
-   ],
-   "source": [
-    "W = np.random.normal(0, 1, (1000,))\n",
-    "X = W + np.random.normal(0, 1, (1000,))\n",
-    "Z = np.random.normal(0, 1, (1000,))\n",
-    "Y = X + Z + W + np.random.normal(0, 1, (1000,))\n",
-    "\n",
-    "# when Y is modeled as depending only on X, the error term = Z + W + random noise\n",
-    "error = Z + W + np.random.normal(0, 1, (1000,))\n",
-    "\n",
-    "# compute correlation between X and the error term\n",
-    "corr = np.corrcoef(X, error)[0, 1]\n",
-    "print(\"Correlation between X and the error term:\", corr)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fa775290",
-   "metadata": {},
-   "source": [
-    "Question 2\n",
-    "\n",
-    "\n",
-    "If ﻿Y﻿ is written as depending on ﻿X﻿ and ﻿Z﻿ only, ﻿W﻿ is part of the error term. Which, then, is closest to the expected correlation of ﻿X﻿ with the error term in the equation for ﻿Y﻿? \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "ceb2ce14",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correlation between X and the error term: 0.48407444829165097\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "W = np.random.normal(0, 1, (1000,))\n",
-    "X = W + np.random.normal(0, 1, (1000,))\n",
-    "Z = np.random.normal(0, 1, (1000,))\n",
-    "Y = X + Z + W + np.random.normal(0, 1, (1000,))\n",
-    "\n",
-    "# since Y depends on X and Z only, the error term contains W + random noise\n",
-    "error = W + np.random.normal(0, 1, (1000,))\n",
-    "\n",
-    "# compute correlation between X and the error term\n",
-    "corr = np.corrcoef(X, error)[0, 1]\n",
-    "print(\"Correlation between X and the error term:\", corr)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d4987e31",
-   "metadata": {},
-   "source": [
-    "Question 3\n",
-    "\n",
-    "In the data frame for homework_7.1.csv, control for W by regressing ﻿Y﻿ on ﻿X﻿ and ﻿Z﻿ at the following constant values of ﻿W﻿: -1, 0, and 1. (You cannot literally use a constant value of ﻿W﻿, of course, or you will have only one data point! How will you manage this?) The question is: Is the coefficient of ﻿X﻿  \n",
-    "\n",
-    "Option A\n",
-    "increasing\n",
-    "\n",
-    "Option B\n",
-    "decreasing\n",
-    "\n",
-    "Option C\n",
-    "staying about the same (say, within 0.2 or so) as ﻿W﻿ increases? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "ebf0e890",
+   "execution_count": 4,
+   "id": "1d8e1386",
    "metadata": {},
    "outputs": [
     {
@@ -497,232 +375,231 @@
        "      <th></th>\n",
        "      <th>Unnamed: 0</th>\n",
        "      <th>X</th>\n",
-       "      <th>W</th>\n",
-       "      <th>Z</th>\n",
        "      <th>Y</th>\n",
+       "      <th>Z</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>1.137055</td>\n",
-       "      <td>1.221768</td>\n",
-       "      <td>0.327829</td>\n",
-       "      <td>1.944532</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.109218</td>\n",
+       "      <td>1.764052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>-0.112905</td>\n",
-       "      <td>0.465835</td>\n",
-       "      <td>0.599650</td>\n",
-       "      <td>0.655514</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.259504</td>\n",
+       "      <td>0.400157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>2.077755</td>\n",
-       "      <td>1.795414</td>\n",
-       "      <td>-0.063393</td>\n",
-       "      <td>5.934411</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.647584</td>\n",
+       "      <td>0.978738</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>0.456373</td>\n",
-       "      <td>-0.512159</td>\n",
-       "      <td>1.177413</td>\n",
-       "      <td>-0.188064</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.106071</td>\n",
+       "      <td>2.240893</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>-1.012402</td>\n",
-       "      <td>0.080002</td>\n",
-       "      <td>-0.275697</td>\n",
-       "      <td>-0.533775</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.583464</td>\n",
+       "      <td>1.867558</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0         X         W         Z         Y\n",
-       "0           0  1.137055  1.221768  0.327829  1.944532\n",
-       "1           1 -0.112905  0.465835  0.599650  0.655514\n",
-       "2           2  2.077755  1.795414 -0.063393  5.934411\n",
-       "3           3  0.456373 -0.512159  1.177413 -0.188064\n",
-       "4           4 -1.012402  0.080002 -0.275697 -0.533775"
+       "   Unnamed: 0  X         Y         Z\n",
+       "0           0  1  4.109218  1.764052\n",
+       "1           1  0  2.259504  0.400157\n",
+       "2           2  0 -0.647584  0.978738\n",
+       "3           3  0  2.106071  2.240893\n",
+       "4           4  1  3.583464  1.867558"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df7 = pd.read_csv(\"homework_7.1.csv\")\n",
-    "df7.head()"
+    "df8 = pd.read_csv(\"homework_8.1.csv\")\n",
+    "df8.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "bf1222e1",
+   "execution_count": null,
+   "id": "42b4d0d8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "When W is around -1, coefficient of X = 0.990090408694134\n",
-      "When W is around 0, coefficient of X = 1.4859822514480032\n",
-      "When W is around 1, coefficient of X = 1.9936504417092331\n"
+      "ATE ≈ 2.274\n"
      ]
     }
    ],
    "source": [
-    "# Subset the data where W is close to -1\n",
-    "df_w_neg1 = df7[(df7['W'] > -1.5) & (df7['W'] < -0.5)]\n",
-    "model_neg1 = sm.OLS(df_w_neg1['Y'], sm.add_constant(df_w_neg1[['X', 'Z']])).fit()\n",
-    "print(\"When W is around -1, coefficient of X =\", model_neg1.params['X'])\n",
+    "# Week 8, Question 1\n",
     "\n",
-    "# W around 0\n",
-    "df_w_0 = df7[(df7['W'] > -0.5) & (df7['W'] < 0.5)]\n",
-    "model_0 = sm.OLS(df_w_0['Y'], sm.add_constant(df_w_0[['X', 'Z']])).fit()\n",
-    "print(\"When W is around 0, coefficient of X =\", model_0.params['X'])\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "# W around 1\n",
-    "df_w_1 = df7[(df7['W'] > 0.5) & (df7['W'] < 1.5)]\n",
-    "model_1 = sm.OLS(df_w_1['Y'], sm.add_constant(df_w_1[['X', 'Z']])).fit()\n",
-    "print(\"When W is around 1, coefficient of X =\", model_1.params['X'])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f42ea707",
-   "metadata": {},
-   "source": [
-    "Question 4\n",
+    "df8 = pd.read_csv(\"homework_8.1.csv\")\n",
     "\n",
+    "Z = df8[[\"Z\"]]\n",
+    "X = df8[\"X\"]\n",
+    "Y = df8[\"Y\"]\n",
     "\n",
-    "def make_error(corr_const, num): \n",
+    "log_model = LogisticRegression()\n",
+    "log_model.fit(Z, X)\n",
     "\n",
-    " err = list() \n",
+    "P = log_model.predict_proba(Z)[:, 1]\n",
     "\n",
-    "    prev = np.random.normal(0, 1) \n",
+    "# IPW\n",
+    "weights = np.where(X == 1, 1 / P, 1 / (1 - P))\n",
     "\n",
-    " for n in range(num): \n",
+    "ATE = (np.sum(weights * (X * Y)) / np.sum(weights * X)) - \\\n",
+    "      (np.sum(weights * ((1 - X) * Y)) / np.sum(weights * (1 - X)))\n",
     "\n",
-    "    prev = corr_const * prev + (1 - corr_const) * np.random.normal(0, 1) \n",
-    "\n",
-    "    err.append(prev) \n",
-    "\n",
-    "return np.array(err) \n",
-    "\n",
-    "\n",
-    "\n",
-    "Create a linear regression model that uses this function as the error for both (a) the treatment, ﻿X﻿, and (b) the outcome, ﻿Y﻿. (You can use random normal error for any other covariates, if you have them.) \n",
-    "\n",
-    "\n",
-    "\n",
-    "As corr_const increases from 0.2 to 0.5 to 0.8, find (i) the standard deviation of the estimate of the ﻿X﻿ coefficient over many trials, and (ii) the mean of the standard error estimate of the ﻿X﻿ coefficient over many trials. \n",
-    "\n",
-    "\n",
-    "\n",
-    "When corr_const increases, then: \n",
-    "\n",
-    "\n",
-    "\n",
-    "Hint: don't forget to include an intercept in your regression\n",
-    "\n",
-    "Option A\n",
-    "(i) and (ii) remain about the same\n",
-    "\n",
-    "Option B\n",
-    "The ratio (i) / (ii) decreases\n",
-    "\n",
-    "Option C\n",
-    "(i) and (ii) differ, but their ratio remains about the same\n",
-    "\n",
-    "Option D\n",
-    "The ratio (i) / (ii) increases\n",
-    "\n"
+    "print(f\"ATE ≈ {ATE:.3f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "bf85ae70",
+   "execution_count": 7,
+   "id": "565002af",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   corr_const  (i) std of β_X  (ii) mean SE  ratio (i)/(ii)\n",
-      "0         0.2        0.029915      0.031531        0.948757\n",
-      "1         0.5        0.041477      0.031510        1.316324\n",
-      "2         0.8        0.067064      0.031621        2.120874\n"
+      "[0.84 0.58 0.71]\n"
      ]
     }
    ],
    "source": [
-    "# Function to make correlated errors\n",
-    "def make_error(corr_const, num):\n",
-    "    err = []\n",
-    "    prev = np.random.normal(0, 1)\n",
-    "    for i in range(num):\n",
-    "        prev = corr_const * prev + (1 - corr_const) * np.random.normal(0, 1)\n",
-    "        err.append(prev)\n",
-    "    return np.array(err)\n",
+    "# Question 2\n",
     "\n",
-    "corr_levels = [0.2, 0.5, 0.8]\n",
+    "print(np.round(P[:3], 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2e9d8e85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ATE ≈ 3.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 3\n",
     "\n",
-    "# To store the results\n",
-    "results = []\n",
     "\n",
-    "# Fix random seed so we can reproduce results\n",
-    "np.random.seed(42)\n",
+    "from scipy.spatial.distance import mahalanobis\n",
+    "from numpy.linalg import inv\n",
     "\n",
-    "# For each correlation level\n",
-    "for corr_const in corr_levels:\n",
-    "    all_betas = []\n",
-    "    all_ses = []\n",
-    "    \n",
-    "    # Run many simulations\n",
-    "    for i in range(100):  # 100 trials\n",
-    "        n = 1000\n",
-    "        \n",
-    "        # Create errors for X and Y\n",
-    "        eX = make_error(corr_const, n)\n",
-    "        eY = make_error(corr_const, n)\n",
-    "        \n",
-    "        # Generate data\n",
-    "        Z = np.random.normal(0, 1, n)\n",
-    "        X = 0.5 * Z + eX\n",
-    "        Y = 1.0 * X + 0.3 * Z + eY\n",
-    "        \n",
-    "        # Run regression: Y ~ X + Z\n",
-    "        X_matrix = sm.add_constant(np.column_stack([X, Z]))\n",
-    "        model = sm.OLS(Y, X_matrix).fit()\n",
-    "        \n",
-    "        # Save the coefficient for X and its standard error\n",
-    "        all_betas.append(model.params[1])  # X coefficient\n",
-    "        all_ses.append(model.bse[1])       # X standard error\n",
-    "    \n",
-    "    # Compute (i) and (ii)\n",
-    "    std_dev_of_betas = np.std(all_betas)\n",
-    "    mean_se = np.mean(all_ses)\n",
-    "    ratio = std_dev_of_betas / mean_se\n",
-    "    \n",
-    "    # Save the results\n",
-    "    results.append([corr_const, std_dev_of_betas, mean_se, ratio])\n",
+    "df82 = pd.read_csv(\"homework_8.2.csv\")\n",
     "\n",
-    "# Show results\n",
-    "results_df = pd.DataFrame(results, columns=[\"corr_const\", \"(i) std of β_X\", \"(ii) mean SE\", \"ratio (i)/(ii)\"])\n",
-    "print(results_df)\n"
+    "# treated (X=1), untreated (X=0)\n",
+    "treated = df82[df82[\"X\"] == 1].reset_index(drop=True)\n",
+    "untreated = df82[df82[\"X\"] == 0].reset_index(drop=True)\n",
+    "\n",
+    "Z = df82[[\"Z1\", \"Z2\"]].to_numpy()\n",
+    "\n",
+    "cov_matrix = np.cov(Z, rowvar=False)\n",
+    "inv_cov = inv(cov_matrix)\n",
+    "\n",
+    "# matching using Mahalanobis distance\n",
+    "matches = []\n",
+    "for i in range(len(treated)):\n",
+    "    z_treated = treated.loc[i, [\"Z1\", \"Z2\"]].to_numpy()\n",
+    "    distances = [mahalanobis(z_treated, untreated.loc[j, [\"Z1\", \"Z2\"]].to_numpy(), inv_cov)\n",
+    "                 for j in range(len(untreated))]\n",
+    "    nearest_index = np.argmin(distances)\n",
+    "    matches.append(untreated.loc[nearest_index, \"Y\"])\n",
+    "\n",
+    "treated[\"Y_cf\"] = matches\n",
+    "treated[\"TE\"] = treated[\"Y\"] - treated[\"Y_cf\"]\n",
+    "\n",
+    "ATE = treated[\"TE\"].mean()\n",
+    "print(f\"ATE ≈ {ATE:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "298585bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Treated item with least common support (exact): (np.float64(2.69622405256358), np.float64(0.5381554886023228))\n",
+      "Rounded to match options: (np.float64(2.7), np.float64(0.5))\n",
+      "Nearest untreated to that treated (Z1, Z2): (np.float64(1.5199948607657727), np.float64(-1.2822079376259403))\n",
+      "Mahalanobis distance to nearest untreated: 1.3830045328325058\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 4\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from numpy.linalg import inv, pinv\n",
+    "from scipy.spatial.distance import cdist\n",
+    "\n",
+    "df = pd.read_csv(\"homework_8.2.csv\")\n",
+    "\n",
+    "treated = df[df[\"X\"] == 1].reset_index(drop=True)\n",
+    "untreated = df[df[\"X\"] == 0].reset_index(drop=True)\n",
+    "\n",
+    "Z_all = df[[\"Z1\", \"Z2\"]].to_numpy()\n",
+    "Z_t = treated[[\"Z1\", \"Z2\"]].to_numpy()\n",
+    "Z_u = untreated[[\"Z1\", \"Z2\"]].to_numpy()\n",
+    "\n",
+    "cov = np.cov(Z_all, rowvar=False)\n",
+    "VI = pinv(cov)\n",
+    "\n",
+    "D = cdist(Z_t, Z_u, metric=\"mahalanobis\", VI=VI)\n",
+    "\n",
+    "nearest_dists = D.min(axis=1)\n",
+    "nearest_idxs  = D.argmin(axis=1)\n",
+    "\n",
+    "i_farthest = int(nearest_dists.argmax())\n",
+    "\n",
+    "z1, z2 = treated.loc[i_farthest, [\"Z1\", \"Z2\"]].to_numpy()\n",
+    "\n",
+    "print(\"Treated item with least common support (exact):\", (z1, z2))\n",
+    "print(\"Rounded to match options:\", (np.round(z1, 1), np.round(z2, 1)))\n",
+    "\n",
+    "j_nearest = int(nearest_idxs[i_farthest])\n",
+    "z1_u, z2_u = untreated.loc[j_nearest, [\"Z1\", \"Z2\"]].to_numpy()\n",
+    "print(\"Nearest untreated to that treated (Z1, Z2):\", (z1_u, z2_u))\n",
+    "print(\"Mahalanobis distance to nearest untreated:\", float(nearest_dists[i_farthest]))"
    ]
   }
  ],
