--- a/2025 Fall - Mod 6 - Rain Dimen - Week 5-8.ipynb
+++ b/2025 Fall - Mod 6 - Rain Dimen - Week 5-8.ipynb
@@ -1196,6 +1196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# don't run \n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -1487,74 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "7d5d0ddb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Treated item with least common support (Z1, Z2): (2.7, 0.5)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Question 4\n",
-    "\n",
-    "from scipy.spatial.distance import cdist\n",
-    "\n",
-    "# ✅ Compute Mahalanobis distances between all treated and untreated observations\n",
-    "treated_Z = treated[[\"Z1\", \"Z2\"]].to_numpy()\n",
-    "untreated_Z = untreated[[\"Z1\", \"Z2\"]].to_numpy()\n",
-    "\n",
-    "# Create full distance matrix\n",
-    "dist_matrix = cdist(treated_Z, untreated_Z, metric=\"mahalanobis\", VI=inv_cov)\n",
-    "\n",
-    "# For each treated item, find the nearest untreated (minimum distance)\n",
-    "nearest_dists = dist_matrix.min(axis=1)\n",
-    "\n",
-    "# Find the treated item with the largest of those minimum distances\n",
-    "idx_farthest = np.argmax(nearest_dists)\n",
-    "\n",
-    "# Extract its Z1, Z2 values\n",
-    "worst_Z = treated.loc[idx_farthest, [\"Z1\", \"Z2\"]]\n",
-    "print(\"Treated item with least common support (Z1, Z2):\", tuple(np.round(worst_Z, 1)))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "94d621c1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Treated item with least common support (Z1, Z2): (2.7, 0.5)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Question 4\n",
-    "\n",
-    "distances = []\n",
-    "for i in range(len(treated)):\n",
-    "    z_treated = treated.loc[i, [\"Z1\", \"Z2\"]].to_numpy()\n",
-    "    dists = [mahalanobis(z_treated, untreated.loc[j, [\"Z1\", \"Z2\"]].to_numpy(), inv_cov)\n",
-    "             for j in range(len(untreated))]\n",
-    "    distances.append(np.min(dists))  \n",
-    "\n",
-    "idx_farthest = np.argmax(distances)\n",
-    "worst_Z = treated.loc[idx_farthest, [\"Z1\", \"Z2\"]]\n",
-    "\n",
-    "print(\"Treated item with least common support (Z1, Z2):\", tuple(np.round(worst_Z, 1)))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "1086391f",
    "metadata": {},
    "outputs": [
@@ -1570,45 +1504,37 @@
     }
    ],
    "source": [
+    "# Question 4\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from numpy.linalg import inv, pinv\n",
     "from scipy.spatial.distance import cdist\n",
     "\n",
-    "# Load\n",
     "df = pd.read_csv(\"homework_8.2.csv\")\n",
     "\n",
-    "# Split\n",
     "treated = df[df[\"X\"] == 1].reset_index(drop=True)\n",
     "untreated = df[df[\"X\"] == 0].reset_index(drop=True)\n",
     "\n",
-    "# Covariates\n",
     "Z_all = df[[\"Z1\", \"Z2\"]].to_numpy()\n",
     "Z_t = treated[[\"Z1\", \"Z2\"]].to_numpy()\n",
     "Z_u = untreated[[\"Z1\", \"Z2\"]].to_numpy()\n",
     "\n",
-    "# Inverse covariance of all Z1/Z2 (2x2)\n",
     "cov = np.cov(Z_all, rowvar=False)\n",
-    "# Use pinv for numerical stability (falls back to inv if you want)\n",
     "VI = pinv(cov)\n",
     "\n",
-    "# Distance matrix: rows = treated, cols = untreated\n",
     "D = cdist(Z_t, Z_u, metric=\"mahalanobis\", VI=VI)\n",
     "\n",
-    "# Nearest untreated distance for each treated\n",
     "nearest_dists = D.min(axis=1)\n",
     "nearest_idxs  = D.argmin(axis=1)\n",
     "\n",
-    "# Treated with least common support = largest nearest distance\n",
     "i_farthest = int(nearest_dists.argmax())\n",
     "\n",
-    "# Z1, Z2 of that treated item\n",
     "z1, z2 = treated.loc[i_farthest, [\"Z1\", \"Z2\"]].to_numpy()\n",
     "\n",
     "print(\"Treated item with least common support (exact):\", (z1, z2))\n",
     "print(\"Rounded to match options:\", (np.round(z1, 1), np.round(z2, 1)))\n",
     "\n",
-    "# (Optional) also show the nearest untreated it matched to and the distance\n",
     "j_nearest = int(nearest_idxs[i_farthest])\n",
     "z1_u, z2_u = untreated.loc[j_nearest, [\"Z1\", \"Z2\"]].to_numpy()\n",
     "print(\"Nearest untreated to that treated (Z1, Z2):\", (z1_u, z2_u))\n",
